# libjson-rpc-cpp

./: CMakeLists.txt  README.md
src/example/websocket/: CMakeLists.txt  Makefile.am  simplewebsocketserver.cpp  wsclient.html
src/jsonrpc/: debug.cpp  debug.h  rpc.h  server.h  serverconnector.h
src/jsonrpc/connectors/: httpserver.cpp  httpserver.h  mongoose.c  websocketserver.cpp  websocketserver.h
